# website

./: .coveragerc  .dockerignore  .env.example  .gitignore  .tool-versions  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER-BRANCHES.md  Dockerfile  MIGRATION_DEPLOYMENT.md  Procfile  README.md  Taskfile.yaml  circle.yml  development.env  docker-compose.yml  manage.py  pyproject.toml  renovate.json  requirements-base.txt  requirements-dev.txt  requirements.txt  runtime.txt  toast.yml
.circleci/: config.yml
.claude/commands/: commit.md
.github/workflows/: test.yml
pythonie/: .gitignore  Vagrantfile  settings.py  setup.py  tox.ini  wsgi.py
pythonie/core/: admin.py  factories.py  models.py  wagtail_hooks.py
pythonie/core/management/commands/: generate_sample_data.py
pythonie/core/migrations/: 0001_initial.py  0002_simplepage.py  0003_media_in_simple_page.py  0003_newsindex_newsitem.py  0004_auto_20150708_1416.py  0005_auto_20150726_1416.py  0006_homepagesponsorrelationship.py  0007_homepage_sponsors.py  0008_auto_20150821_2230.py  0009_auto_20160703_0857.py  0010_remove_speakers_tables.py
pythonie/core/static/css/: bootstrap.css  style.css  tito.css  tweet.css
pythonie/core/static/js/: hallo-custombuttons.js  theme-toggle.js
pythonie/core/templates/: 404.html  base.html  footer.html  header.html  navbar.html  navbar_tree.html
pythonie/core/templates/blog/: blog_index_page.html  blog_page.html  blog_post.html
pythonie/core/templates/core/: home_page.html  meetup.html  news_index.html  segment.html  simple_page.html  speakers.html  sponsor.html
pythonie/core/templatetags/: core_tags.py
pythonie/meetups/: __init__.py  admin.py  models.py  schema.py  test_meetups.py  utils.py
pythonie/meetups/management/commands/: updatemeetups.py
pythonie/meetups/migrations/: 0001_initial.py  0002_add_meetup_sponsor_relationship.py  0003_remove_meetup_announced.py  0004_auto_20150705_1641.py  0005_delete_meetupupdate.py  0006_auto_20160703_0857.py  0007_alter_meetup_options.py
pythonie/pythonie/: urls.py  wsgi.py
pythonie/pythonie/settings/: base.py  configure.py  dev.py  patches.py  production.py  tests.py
pythonie/speakers/: admin.py  models.py
pythonie/speakers/management/commands/: import-sessionize.py  update-sessionize-json-stream.py  updatespeakers.py
pythonie/speakers/migrations/: 0001_initial.py  0002_talkspage.py  0003_auto_20220929_1828.py  0004_alter_session_room.py  0004_alter_speaker_external_id.py  0005_auto_20220930_0728.py  0006_alter_speaker_picture_url.py
pythonie/speakers/templates/speakers/: session.html  speaker.html  speaker_picture.html  speakers_page.html  (+1 more)
pythonie/speakers/templatetags/: speaker_tags.py
pythonie/sponsors/: admin.py  models.py  test_sponsors.py
pythonie/sponsors/migrations/: 0001_initial.py  0002_restructure_sponsor.py  0003_sponsorshiplevel.py  0004_auto_20150726_1412.py
pythonie/templates/: base.html
pythonie/templates/wagtailembeds/: embed_frontend.html
pythonie/vagrant/: provision.sh
requirements/: dev.in  dev.txt  main.in  main.txt  production.in  production.txt
scripts/: README-heroku-migration.md  migrate-heroku-24.sh
